# otf2psf

./: .gitignore  .plan.txt.swp  Cargo.toml  README.md  example.set  generate_charset.py  my.set  out.2.psf  out.3.psf  out.512.psf  out.psf  plan.txt  recovered_unicode_table
src/: .char_info_macro.rs.swp  .glyph_image_owned.rs.swl  .glyph_image_owned.rs.swm  .glyph_image_owned.rs.swn  .glyph_image_owned.rs.swo  .glyph_image_owned.rs.swp  .glyph_image_pixel.rs.swo  .main.rs.swp  .psf2_font.rs.swp  .psf2_writer.rs.swp  .scratch.txt.swp  .ttf_parser.rs.swp  .unicode_table_grammar.pest.swp  char_info_macro.rs  errors.rs  glyph.rs  glyph_image_owned.rs  main.rs  psf2_font.rs  psf2_writer.rs  report.rs  ttf_parser.rs  unicode_table.rs  unicode_table_grammar.pest
src/old_junk/: glyph_image_owned.rs  grapheme_info.rs  psf2_font.rs
