[package]
name = "otf2psf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.28"
bitvec = "1.0.1"
charname = "1.15.1"
clap = { version = "4.5.15", features = ["derive"] }
colog = "1.3.0"
image = "0.25.2"
itertools = "0.13.0"
log = "0.4.22"
pest = "2.7.14"
pest_derive = "2.7.14"
regex = "1.10.6"
rusttype = "0.9.3"
unicode-blocks = "0.1.9"
unicode-segmentation = "1.11.0"
